# ShbGameEngine

./: CMakeLists.txt  README.md  build.sh  build_run.sh  run.sh
docs/: Object-class.md
include/: CMakeLists.txt  app.hpp  buffers.hpp  camera.hpp  checkpoints.hpp  files.hpp  gui.hpp  object.hpp  objectBufferFactory.hpp  shaders.hpp  state.hpp  text.hpp  textures.hpp  vertices.hpp
src/: .main.cpp.swp  CMakeLists.txt  app.cpp  app_input.cpp  camera.cpp  checkpoints.cpp  gui.cpp  objectBufferFactory.cpp  shaders.cpp  text.cpp  textures.cpp
src/events/: all_events.hpp  event_manager.cpp  event_manager.hpp
src/examples/: bouncing_square.cpp
src/shaders/: 3DObject.frag  3DObject.vert  3DObjectSkybox.frag  3DObjectSkybox.vert  3DObjectTextured.frag  3DObjectTextured.vert  text_shader.vert
